@@ -38,9 +38,12 @@ if (!defined ("TYPO3_MODE")) die ("Access denied.");
  * @subpackage  tx_saltedpasswords
  */
 class tx_saltedpasswords_emconfhelper  {
-	private $errorType = t3lib_FlashMessage::OK;
-	private $header = string;
-	private $preText = string;	
+	
+	protected $errorType = t3lib_FlashMessage::OK;
+	
+	protected $header;
+	
+	protected $preText;	
 	
 	/**
 	 * Function which is called as userFunc from extEmConf
@@ -96,7 +99,7 @@ class tx_saltedpasswords_emconfhelper  {
 					// inform the user how passwords are updated an that there is an convert script for fe_users
 				} else {
 					$this->setErrorLevel('info');
-					$problems[] = 'You set "updatePasswd". Please Passwords will be converted on first login of each user. For FE-User there is a cli-script available, converting ALL fe-user passwords immidiately';
+					$problems[] = 'You\'ve enabled option "updatePasswd". Passwords will be converted during authentication to the chosen salted hashing method if necessary. For FE-User there is a cli-script available, converting ALL fe-user passwords immediately.';
 				}
 			}
 			
@@ -105,21 +108,31 @@ class tx_saltedpasswords_emconfhelper  {
 					// warn user taht the combination with "forceSalted" may lock him out from Backend
 				if($extConf['forceSalted']) {
 					$this->setErrorLevel('warning');
-					$problems[] = 'You configured saltedpasswords to be the only aut-service AND forced salted-passwords. The result ist that there won\'t be any chance to login with users not having a salted password hash. Are you sure you wanna do this? This might lock you out from backend!';
+					$problems[] = 'You\' configured saltedpasswords to be the only authentication service AND forced salted-passwords. The result ist that there won\'t be any chance to login with users not having a salted password hash. Are you sure you wanna do this? This might lock you out from backend!';
 					//inform the user that things like openid won't work anymore
 				} else {
 					$this->setErrorLevel('info');
-					$problems[] = 'You configured saltedpasswords to be the only auth-service. This means that other services like ipauth, openid etc. Does not affect "rsauth", which will be implicitely used';
+					$problems[] = 'You\' configured saltedpasswords to be the only authentication service. This means that other services like ipauth, openid etc will tried if authentication fails. Does not affect "rsauth", which will be implicitely used.';
 				}
 			}
 			
-			
-				// inform the user if securityLevel in FE is superchallenged or blank --> extension won't work
-			if(!t3lib_div::inList($extConf['forceSalted'],'normal,rsa')) {
-				$this->setErrorLevel('info');
-				$problems[] = 'saltedpasswords are not activated for fronted-logins. use the Install-Tool to set the Security-Level for Frontend to "rsa" or "normal" (\$TYPO3_CONF_VARS][FE][loginSecurityLevel]). Make sure, that it is not blank or superchallenged.';
+				// MD5 not available, but configured
+			if ($extConf['saltedPWHashingMethod'] == '1' && !CRYPT_MD5) {
+				$this->setErrorLevel('error');
+				$problems[] = 'You\' configured saltedpasswords to use MD5 encryption which is not available on your system. Please use another method!';
+			}
+
+				// Blowfish not available, but configured
+			if ($extConf['saltedPWHashingMethod'] == '2' && !CRYPT_BLOWFISH) {
+				$this->setErrorLevel('error');
+				$problems[] = 'You\' configured saltedpasswords to use Blowfish encryption which is not available on your system. Please use another method!';
 			}
 			
+				// inform the user if securityLevel in FE is superchallenged or blank --> extension won't work
+			if(!t3lib_div::inList('normal,rsa', $GLOBALS['TYPO3_CONF_VARS']['FE']['loginSecurityLevel'])) {
+				$this->setErrorLevel('info');
+				$problems[] = 'saltedpasswords is not activated for frontend-logins. use the Install-Tool to set the Security-Level for Frontend to "rsa" or "normal" ($TYPO3_CONF_VARS][FE][loginSecurityLevel]). Make sure, that it is not blank or superchallenged.';
+			}
 			
 				// if there are problems, render them into an unordered list
 			if(count($problems)>0) {
@@ -127,17 +140,11 @@ class tx_saltedpasswords_emconfhelper  {
 			}
 		}
 
-		$message=$this->preText . $message;
-		if($message != '') {
-			$message = t3lib_div::makeInstance('t3lib_FlashMessage',
-				$message,
-				$this->header,
-				$this->errorType
-			);
-			return $message->render();
-		} else {
-			return '';
-		}
+		if (empty($message))  $this->setErrorLevel('ok');
+		
+		$message = $this->preText . $message;
+		$message = t3lib_div::makeInstance('t3lib_FlashMessage', $message, $this->header, $this->errorType);
+		return $message->render();
 	}
 	
 	/**
@@ -156,15 +163,14 @@ class tx_saltedpasswords_emconfhelper  {
 			case 'warning':
 				if ($this->errorType != t3lib_FlashMessage::ERROR) {
 					$this->errorType = t3lib_FlashMessage::WARNING;
-					$this->header = 'There are Warnings belonging your configuration.';
-					$this->preText = 'The extensions might behave other than you may expect it.<br />';
-					
+					$this->header = 'There are warnings regarding your configuration.';
+					$this->preText = 'The extension might behave different from your expectations.<br />';
 				}
 				break;
 			case 'info' : 
 				if ($this->errorType != t3lib_FlashMessage::ERROR && $this->errorType != t3lib_FlashMessage::WARNING) {
 					$this->errorType = t3lib_FlashMessage::INFO;
-					$this->header = 'Addditional information about your configuration is available.<br />';
+					$this->header = 'Additional information about your configuration is available.<br />';
 					$this->preText = '';
 				}
 				break;
@@ -176,7 +182,6 @@ class tx_saltedpasswords_emconfhelper  {
 				}
 				break;
 		}
-
 	}
 }
 
