@@ -130,7 +130,7 @@ class tx_saltedpasswords_salts_blowfish extends tx_saltedpasswords_salts_md5 {
 		$saltWithSettings = $salt;
 		
 			// determines required length of base64 characters
-			// (calulates bytes in bits in base64)
+			// (calculates bytes in bits in base64)
 		$reqLenBase64 = intval(ceil(($this->getSaltLength() * 8) / 6));
 		
 					// salt without setting
@@ -263,7 +263,7 @@ class tx_saltedpasswords_salts_blowfish extends tx_saltedpasswords_salts_md5 {
 		$isValid = $skip = false;
 			
 			// determines required length of base64 characters
-			// (calulates bytes in bits in base64)
+			// (calculates bytes in bits in base64)
 		$reqLenBase64 = intval(ceil(($this->getSaltLength() * 8) / 6));
 		
 		if (strlen($salt) >= $reqLenBase64) {
