@@ -1,21 +1,23 @@
 # cat=basic; type=user[EXT:saltedpasswords/classes/class.tx_saltedpasswords_emconfhelper.php:tx_saltedpasswords_emconfhelper->checkConfiguration]; label=
-checkConfiguration=0
+checkConfigurationBasic=0
 
-# cat=basic; type=boolean; label=Use as only authentication service: If enabled and authentication fails, no further authentication service will be tried.
-onlyAuthService = 0
+# cat=advanced; type=user[EXT:saltedpasswords/classes/class.tx_saltedpasswords_emconfhelper.php:tx_saltedpasswords_emconfhelper->checkConfiguration]; label=
+checkConfigurationAdvanced=0
 
-# cat=basic; type=boolean; label=Force salted passwords: Use only salted password. Old MD5 hashed passwords won't work anymore.
+# cat=basic/enable; type=options[Portable PHP password hashing (phpass)=0,MD5 salted hashing (secure)=1,Blowfish salted hashing (advanced)=2]; label=Salted password hashing method: Defines how autoconfiguration file is stored. Use "Serialized" because it is 10 times or more faster! Use "PHP source" if you are curious what is generated or want to copy and modify generated configuration.
+saltedPWHashingMethod = 0
+
+# cat=advanced/enable; type=boolean; label=Force salted passwords: Use only salted password. Old MD5 hashed passwords won't work anymore.
 forceSalted = 0
 
-# cat=basic; type=boolean; label=Update FE/BE user passwords: Update FE/BE user passwords to salted hash ones during authentication. (will not work when forceSalted is activated)
+# cat=advanced/enable; type=boolean; label=Use as only authentication service: If enabled and authentication fails, no further authentication service will be tried.
+onlyAuthService = 0
+
+# cat=advanced/enable; type=boolean; label=Update FE/BE user passwords: Update FE/BE user passwords to salted hash ones during authentication. (will not work when forceSalted is activated)
 updatePasswd = 1
 
-# cat=basic; type=boolean; label=Use Blowfish Encryption: Use Blowfish Encryption instead of MD5 Hashing for building the Salted Hashes
-useBlowFish = 0
 
-
-
-TSConstantEditor.basic {
+TSConstantEditor.advanced {
   description = <span style="background:red; padding:1px 2px; color:#fff; font-weight:bold;">1</span> Install tool has hardcoded md5 hashing, enabling this setting will prevent use of a install-tool-created BE user.<br />Currently same is for changin password with user setup module unless you use pending patch!
   1=forceSalted
 }
